--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,9 +9,6 @@ node {
     }
     stage("phpunit") {
         // Run PHPUnit
-        sh 'php artisan key:generate'
-        sh 'php artisan config:cache'
-
-        sh 'vendor/bin/phpunit'
+        sh 'php artisan dusk'
     }
 }
