--- a/.env
+++ b/.env
@@ -6,13 +6,15 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=testing
-DB_HOST=127.0.0.1
-DB_PASSWORD=Password123!
-DB_USERNAME=root
+DB_CONNECTION=sqlite
+DB_DATABASE=testing.sqlite
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=testing
+#DB_HOST=127.0.0.1
+#DB_PASSWORD=Password123!
+#DB_PORT=3306
+#DB_USERNAME=root
 
 
 BROADCAST_DRIVER=log
